zellij-integration-tests/tests/snapshots/nested_sessions__outer_grid_after_inner_ascend.snap
---
source: zellij-integration-tests/tests/nested_sessions.rs
expression: normalized(&outer_after_inner_ascend)
---
 Zellij (test)  test-2 | test-2  + 
 Zellij (test)  test-2  + 
 Zellij (test)  Tab #1  + 
█
 Descend: Ctrl + <o> + <[>
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
 Ascend: Ctrl + <o> + <]>                                                                                               
