zellij-integration-tests/tests/snapshots/nested_sessions__outer_grid_doubly_nested_descended.snap
---
source: zellij-integration-tests/tests/nested_sessions.rs
expression: normalized(&outer_doubly_nested)
---
 Zellij (test)  test-2 | test-2  + 
 Zellij (test)  test-2  + 
 Zellij (test)  Tab #1  + 
█
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
